[gd_scene load_steps=4 format=3 uid="uid://cwkf7vnsk176"]

[ext_resource type="Script" path="res://clients/player/budget_window/accounting_value/accounting_value.gd" id="1_7atlw"]
[ext_resource type="FontFile" uid="uid://dpaiod0xc1xgs" path="res://graphics/fonts/pixel_2.ttf" id="1_7cqrq"]
[ext_resource type="FontFile" uid="uid://k3eydgcdr2v2" path="res://graphics/fonts/germany.ttf" id="2_n1tjw"]

[node name="AccountingValue" type="VBoxContainer"]
script = ExtResource("1_7atlw")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ExpenseName" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_7cqrq")
theme_override_font_sizes/font_size = 25
visible_characters = 16

[node name="Percent" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_7cqrq")
theme_override_font_sizes/font_size = 25
text = "(_%)"

[node name="ReduceValue" type="Button" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n1tjw")
theme_override_font_sizes/font_size = 30
text = "<<<"

[node name="IncreaseValue" type="Button" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n1tjw")
theme_override_font_sizes/font_size = 30
text = ">>>"

[node name="Value" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7cqrq")
theme_override_font_sizes/font_size = 25
text = "__________$"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/ReduceValue" to="." method="reduce_value"]
[connection signal="pressed" from="HBoxContainer/IncreaseValue" to="." method="increase_value"]
